# programacion_estructurada2

./: CMakeLists.txt  README.md  main.c  main.h
ejercicio_1/: estudiante.c  estudiante.h
ejercicio_2/: union_dato.c  union_dato.h
ejercicio_3/: copia_estudiante.c  copia_estudiante.h
ejercicio_4/: alias_estudiante.c  alias_estudiante.h
ejercicio_5/: funciones_estudiante.c  funciones_estudiante.h
